adds cmake recipe for first projecT

--- a/projects/showDate/CMakeLists.txt
+++ b/projects/showDate/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_executable(show_date main.cc)
-add_library(show_Date SHARED main.cc)
+add_library(date SHARED main.cc)
 
-target_link_libraries(show_date LINK_PUBLIC show_Date)
+target_link_libraries(show_date LINK_PUBLIC date)
 
 install(TARGETS show_date RUNTIME DESTINATION bin)
-install(TARGETS show_Date LIBRARY DESTINATION lib)
+install(TARGETS date LIBRARY DESTINATION lib)
