adds impl for computing array size in MB

--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_subdirectory(showDate)
+add_subdirectory(sizeOfArray_writeBandwidth)
 
 # install(DIRECTORY showDate DESTINATION ${CMAKE_INSTALL_PREFIX}/projects/)
