--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(showDate)
 add_subdirectory(sizeOfArray_writeBandwidth)
+add_subdirectory(asyncxx)
 
 # install(DIRECTORY showDate DESTINATION ${CMAKE_INSTALL_PREFIX}/projects/)
