adds implementation that generates an array container from input string streams

--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(showDate)
 add_subdirectory(sizeOfArray_writeBandwidth)
 add_subdirectory(asyncxx)
+add_subdirectory(get-integers-from-strings)
 
 # install(DIRECTORY showDate DESTINATION ${CMAKE_INSTALL_PREFIX}/projects/)
